@@ -1,8 +1,12 @@
 Changes since version 3.1.0
 ---------------------------
 
-- If a proxy contains no -h paramater a Ice client will now attempt 
-  to connect using loopback as well as all other local interfaces.
+- A bug was fixed where the glacier2router would throw a
+  NullHandleException if permission verifier was used that was not
+  configured.
+
+- If a proxy contains no -h paramater a Ice client will now attempt to
+  connect using loopback as well as all other local interfaces.
 
 - Fixed a bug with the IceGrid allocate and sessionAllocation demos 
   where the session would not be destroyed in the event of an 
